# fabric-cli

./: PKGBUILD  README.md  go.mod  go.sum  main.go  meson.build
autocompletions/: bash_autocomplete  fish_autocomplete  zsh_autocomplete
